--- a/Aplicacion de SCRAP/Views/TicketsSMT/Index.cshtml
+++ b/Aplicacion de SCRAP/Views/TicketsSMT/Index.cshtml
@@ -62,10 +62,6 @@
                             @* @Html.DisplayNameFor(model => model.Cost)*@
                             Costo
                         </th>
-                        <th>
-                            @* @Html.DisplayNameFor(model => model.Authorizing)*@
-                            Autorizó
-                        </th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -78,7 +74,7 @@
                                     @Html.DisplayFor(modelItem => item.TicketSMTID)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.CauseSMT.Code)
+                                    @Html.DisplayFor(modelItem => item.CauseSMT.Description)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.CodesSMT.code)
@@ -106,9 +102,6 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Cost)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Authorizing)
                                 </td>
                                 @*<td>
                                         @Html.ActionLink("Edit", "Edit", new { id=item.TicketSMTID }) |
