--- a/Aplicacion de SCRAP/Views/Shared/_Layout.cshtml
+++ b/Aplicacion de SCRAP/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="~/Home/Index">
+                    <a class="navbar-brand" href="../../cts/">
                         <img class=".logo" alt="OSRAM" src="~/Img/logo.png">
                     </a>
                 </div>
