--- a/Aplicacion de SCRAP/Views/TicketsSMT/Create.cshtml
+++ b/Aplicacion de SCRAP/Views/TicketsSMT/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="form-horizontal">
             <div class="col-md-12">
                 <div>
-                    @Html.ActionLink("Autorizaciones", "Index", "", new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Autorizaciones", "Index", "", new { @class = "btn btn-warning" })
                     @Html.ActionLink("Detalle", "Export", "", new { @class = "btn btn-primary" })
                 </div>
                 <hr />
