--- a/Aplicacion de SCRAP/Views/Home/Index.cshtml
+++ b/Aplicacion de SCRAP/Views/Home/Index.cshtml
@@ -18,10 +18,10 @@
         <h1 style="text-align:center;">Reportes de SCRAP</h1>
         <div class="col-lg-offset-4 col-md-4">
             <div class="btnhome">
-                @Html.ActionLink("BACK-END", "Create", "Tickets",null, new { @class = "btn btn-block btn-primary", style = "font-size:30px;" })
+                @Html.ActionLink("BACK-END", "Create", "Tickets",null, new { @class = "btn btn-block btn-warning", style = "font-size:30px;" })
             </div>
             <div class="btnhome">
-                @Html.ActionLink("FRONT-END", "Create", "TicketsSMT",null, new { @class = "btn btn-block btn-primary", style="font-size:30px;" })
+                @Html.ActionLink("FRONT-END", "Create", "TicketsSMT",null, new { @class = "btn btn-block btn-info", style="font-size:30px;" })
             </div>
         </div>
     </div>
