--- a/Aplicacion de SCRAP/Views/TicketsSMT/Export.cshtml
+++ b/Aplicacion de SCRAP/Views/TicketsSMT/Export.cshtml
@@ -12,7 +12,7 @@
 
 <p>
     @Html.ActionLink("Crear Ticket", "Create", "Tickets", new { @class = "btn btn-success" })
-    @Html.ActionLink("Autorizaciones", "Index", "Tickets", new { @class = "btn btn-primary" })
+    @Html.ActionLink("Autorizaciones", "Index", "Tickets", new { @class = "btn btn-warning" })
 </p>
 <div class="form-horizontal">
     <div class="col-md-12">
