--- a/Aplicacion de SCRAP/Views/Users/Index.cshtml
+++ b/Aplicacion de SCRAP/Views/Users/Index.cshtml
@@ -35,7 +35,7 @@
                         @Html.DisplayFor(modelItem => item.EMail)
                     </td>
                     <td>
-                        @Html.ActionLink("Permisos", "Roles", new { userID = item.UserID })
+                        @Html.ActionLink("Permisos", "Roles", new { userID = item.UserID }, new { @class="btn btn-primary" })
                     </td>
                 </tr>
             }
